--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_svg: ^2.0.16
   yandex_mapkit: ^3.2.0
   geolocator: ^9.0.2
+  flutter_bloc: ^9.0.0
 
 dev_dependencies:
   flutter_test:
