--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   yandex_mapkit: ^3.2.0
   geolocator: ^9.0.2
   flutter_bloc: ^9.0.0
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
