--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   dio: ^5.7.0
   google_fonts: ^6.2.1
   intl: ^0.20.2
+  flutter_slidable: ^3.1.2
+
 
 dev_dependencies:
   flutter_test:
